--- a/01-css-typeface/index.html
+++ b/01-css-typeface/index.html
@@ -157,7 +157,17 @@
             <div id="serifs" class="serif-3"></div>
             <div id="serifs" class="serif-4"></div>
         </div>
-        <div class="letter letter-s"></div>
+        <div class="letter letter-s">
+            <div id="s-spine-top"></div>
+            <div id="s-spine-middle"></div>
+            <div id="s-spine-bottom"></div>
+            <div class="s-connector-1"></div>
+            <div class="s-connector-2"></div>
+            <div class="s-serif" id="top"></div>
+            <div class="s-serif" id="bottom"></div>
+
+        </div>
+
         <div class="letter letter-t">
             <div id="t-stem"></div>
             <div id="t-bar"></div>
@@ -169,16 +179,31 @@
             <div id="u-top-left"></div>
             <div id="u-top-right"></div>
         </div>
-        <div class="letter letter-v"></div>
-        <div class="letter letter-w"></div>
+        <div class="letter letter-v">
+            <div id="left-stroke"></div>
+            <div id="right-stroke"></div>
+            <div id="left-serif"></div>
+            <div id="right-serif"></div>
+        </div>
+        <div class="letter letter-w">
+            <div id="left-stroke"></div>
+            <div id="right-stroke"></div>
+
+            <div id="left-serif"></div>
+            <div id="right-serif"></div>
+            <div id="left-space"></div>
+            <div id="right-space"></div>
+        </div>
+
+
         <div class="letter letter-x"></div>
         <div class="letter letter-y"></div>
+
         <div class="letter letter-z">
             <div id="z-top"></div>
             <div id="z-bottom"></div>
             <div id="stroke"></div>
             <div id="z-serif-top"></div> 
-
             <div id="z-serif-bottom"></div> 
         </div>
     
