added new letters - almost finished
- add m, n, y, x
- make small details edits
- todo : edit and iterate X, Y and Z

--- a/01-css-typeface/index.html
+++ b/01-css-typeface/index.html
@@ -96,14 +96,14 @@
             <div id="i-serif" class="top"></div>
             <div id="i-serif" class="bottom"></div>
         </div>
-
+<!-- 
         <div class="letter letter-i-2" >
             <div id="i-stem"></div>
             <div id="i-cut"></div>
             <div id="i-point" class="top"></div>
             <div id="i-space-out"></div>
 
-        </div>
+        </div> -->
         <div class="letter letter-j">
             <div id="j-body"></div>
             <div id="j-curve"></div>
@@ -128,8 +128,24 @@
             <div id="l-space"></div>
             <div id="l-serif"></div>
         </div>
-        <div class="letter letter-m"></div>
-        <div class="letter letter-n"></div>
+        <div class="letter letter-m">
+            <div id="m-stem"></div>
+            <div id="leg-1"></div>
+            <div id="leg-2"></div>
+            <div id="serif-top"></div>
+            <div id="serif-bottom"></div>
+            <div id="counter-1"></div>
+            <div id="counter-2"></div>
+            <div id="serif-right"></div>
+        </div>
+        <div class="letter letter-n">
+            <div id="n-stem"></div>
+            <div id="leg"></div>
+            <div id="serif-top"></div>
+            <div id="serif-bottom"></div>
+            <div id="counter-1"></div>
+            <div id="serif-right"></div>
+        </div>
         <div class="letter letter-o-3">
             <div id="o-curve"></div>
             <div id="o-counter"></div>
@@ -187,17 +203,32 @@
         </div>
         <div class="letter letter-w">
             <div id="left-stroke"></div>
+            <div id="left-mid-stroke"></div>
+            <div id="right-mid-stroke"></div>
             <div id="right-stroke"></div>
-
             <div id="left-serif"></div>
             <div id="right-serif"></div>
-            <div id="left-space"></div>
-            <div id="right-space"></div>
+            <div id="mid-serif"></div>
+        </div>
+        <div class="letter letter-x">
+            <div id="leg-1"></div>
+            <div id="leg-2"></div>
+            <div class="serifs" id="serif-1"></div>
+            <div class="serifs" id="serif-2"></div>
+            <div class="serifs" id="serif-3"></div>
+            <div class="serifs" id="serif-4"></div>
+
         </div>
 
+        <div class="letter letter-y">
+            <div id="stem"></div>
+            <div id="serif-top"></div>
+            <div id="serif-bottom"></div>
+            <div id="bowl"></div>
+            <div id="counter"></div>
+            <div id="hook"></div>
+        </div>
 
-        <div class="letter letter-x"></div>
-        <div class="letter letter-y"></div>
 
         <div class="letter letter-z">
             <div id="z-top"></div>
