--- a/01-css-typeface/index.html
+++ b/01-css-typeface/index.html
@@ -73,13 +73,13 @@
             <div id="g-bar"></div>
             <div id='g-serif'></div>
         </div>
-        <div class="letter letter-g-2">
+        <!-- <div class="letter letter-g-2">
             <div id="g-curve"></div>
             <div id="g-counter"></div>
             <div id="g-space"></div>
             <div id="g-bar"></div>
             <div id='g-serif'></div>
-        </div>
+        </div> -->
 
         <div class="letter letter-h">
             <div id="h-shape"></div>
