--- a/01-css-typeface/index.html
+++ b/01-css-typeface/index.html
@@ -14,15 +14,15 @@
     // 3. make lowercase if you feel like it  -->
 
         <!--------- MAIN ---------->
-        <div class="letter letter-a-3">
-            <div id="a-arch"></div>
+        <div class="letter letter-a">
+            <div class="color" id="a-arch"></div>
             <div id="a-space"></div>
             <div id="a-leg-left"></div>
             <div id="a-leg-right"></div>
             <div id="a-crossbar"></div>            
         </div>
 
-        <div class="letter letter-b-3">
+        <div class="letter letter-b">
             <div id="b-stem"></div>
             <div id="b-bowl-top"></div>
             <div id="b-bowl-bottom"></div>
@@ -146,7 +146,7 @@
             <div id="counter-1"></div>
             <div id="serif-right"></div>
         </div>
-        <div class="letter letter-o-3">
+        <div class="letter letter-o">
             <div id="o-curve"></div>
             <div id="o-counter"></div>
         </div>   
@@ -257,7 +257,8 @@
             <div id="i-dot"></div>
         </div> -->
 
-
+        <!-- <script src='https://officehours.codepanel.in/typing.js'></script> -->
+        <script src='script/script.js'></script>
     </body>
-    <script></script>
+
 </html>
