--- a/01-css-typeface/index.html
+++ b/01-css-typeface/index.html
@@ -160,13 +160,99 @@
             </section>
         </div>
         <div class="information-page">
-            <div class="event-info"></div>
-            <div class="event-info"></div>
-            <div class="event-info"></div>
-            <div class="event-info"></div>
+            <section class="event-info" id="one">
+                <div class="information">
+                    <div id="date"></div>
+                    <div id="introduction"><p>Mindy Seu is a designer and researcher. She holds an M.Des from Harvard’s Graduate School of Design and a B.A. in Design Media Arts from University of California, Los Angeles. As a fellow at the Harvard Law School’s Berkman Klein Center for the Internet & Society, she began the digital Cyberfeminism Index, which was later commissioned by Rhizome and presented at the New Museum. The printed publication Cyberfeminism Catalog is a 2021 recipient of the Graham Foundation Grant and will be published in Fall 2022. Seu has been a fellow at the Internet Archive, as well as a designer for 2×4’s Interactive Media team and the Museum of Modern Art’s in-house design studio. She has given lectures and workshops at Barbican Center, CalArts, Parsons, Pratt, RISD, Berkeley Art Museum, among others. Seu is currently an Assistant Professor at Rutgers Mason Gross School of the Arts and Critic at Yale School of Art.</p>
+                    </div>
+                </div>
+                <div class="guest-name">
+                    <div class="first-name">
+                        <div class="letter letter-m">
+                            <div class="positive" id="m-stem"></div>
+                            <div class="positive" id="leg-1"></div>
+                            <div class="positive" id="leg-2"></div>
+                            <div class="positive" id="serif-top"></div>
+                            <div class="positive" id="serif-bottom"></div>
+                            <div class="negative" id="counter-1"></div>
+                            <div class="negative" id="counter-2"></div>
+                            <div class="positive" id="serif-right"></div>
+                        </div>
+                        <div class="letter letter-i">
+                            <div id="i-stem"></div>
+                            <div id="i-serif" class="top"></div>
+                            <div id="i-serif" class="bottom"></div>
+                        </div>
+                        <div class="letter letter-n">
+                            <div id="n-stem"></div>
+                            <div id="leg"></div>
+                            <div id="serif-top"></div>
+                            <div id="serif-bottom"></div>
+                            <div id="counter-1"></div>
+                            <div id="serif-right"></div>
+                        </div>
+                        <div class="letter letter-d">
+                            <div id="d-stem"></div>
+                            <div id="d-bowl"></div>
+                            <div id="d-counter"></div>
+                            <div id="d-serif-top"></div>
+                            <div id="d-serif-bottom"></div> 
+                        </div>
+                        <div class="letter letter-y">
+                            <div id="stem"></div>
+                            <div id="serif-top"></div>
+                            <div id="serif-bottom"></div>
+                            <div id="bowl"></div>
+                            <div id="counter"></div>
+                            <div id="hook"></div>
+                        </div>
+                    </div>
+                    <div class="last-name">
+                        <div class="letter letter-s">
+                            <div id="s-spine-top"></div>
+                            <div id="s-spine-middle"></div>
+                            <div id="s-spine-bottom"></div>
+                            <div id="s-connector-1"></div>
+                            <div id="s-connector-2"></div>
+                            <div class="s-serif" id="top"></div>
+                            <div class="s-serif" id="bottom"></div>
+                        </div>
+                        <div class="letter letter-e">
+                            <div  id="e-stem"></div>
+                            <div id="e-curve"></div>
+                            <div id="e-counter"></div>
+                            <div id="e-arm"></div>
+                            <div  id="e-bar"></div>
+                            <div  id="e-serif-top"></div>
+                            <div id="e-serif-bottom"></div>
+                        </div>
+                        <div class="letter letter-u">
+                            <div id="u-arch"></div>
+                            <div id="u-space"></div>
+                            <div id="u-top-left"></div>
+                            <div id="u-top-right"></div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </section>
+            <section class="event-info" id="two"></section>
+            <section class="event-info" id="three"></section>
+            <section class="event-info" id="four"></section>
         </div>
 
         <script src="script/script.js"></script>
 
     </body>
 </html>
+
+<!--Reference:
+
+    
+    
+    Adjacent Sibling combinator:
+    https://developer.mozilla.org/en-US/docs/Web/CSS/Adjacent_sibling_combinator
+
+    Hover + div:
+    https://www.w3schools.com/howto/howto_css_display_element_hover.asp -->
